2012-05-05  Stefan Merten  <smerten@oekonux.de>
	* rst.el: Major merge with upstream development up to Docutils
	SVN r7399 / rst.el V1.2.1.

	Clarified maintainership and authors.

	(rst-extract-version, rst-cvs-header, rst-cvs-rev)
	(rst-cvs-timestamp, rst-svn-rev, rst-svn-timestamp)
	(rst-official-version, rst-official-cvs-rev, rst-version)
	(rst-package-emacs-version-alist): New functions and variables
	for version information.

	(rst-bullets, rst-uri-schemes, rst-adornment-chars)
	(rst-max-inline-length, rst-re-alist-def, rst-re-alist)
	(rst-mode-syntax-table, rst-mode): New and corrected functions
	and variables representing reStructuredText features.

	(rst-re): New function for reStructuredText regexes. Used in
	many places.

	(rst-deprecated-keys, rst-call-deprecated, rst-define-key)
	(rst-mode-map): Rebound keys.

	(rst-mode-lazy, rst-font-lock-keywords)
	(rst-font-lock-extend-region)
	(rst-font-lock-extend-region-internal)
	(rst-font-lock-extend-region-extend)
	(rst-font-lock-find-unindented-line-limit)
	(rst-font-lock-find-unindented-line-match)
	(rst-adornment-level, rst-font-lock-adornment-level)
	(rst-font-lock-adornment-match)
	(rst-font-lock-handle-adornment-pre-match-form)
	(rst-font-lock-handle-adornment-matcher): Major revision of
	font-locking. Integrated with other code. `jit-lock-mode' is
	used now.

	(rst-preferred-adornments, rst-adjust-hook)
	(rst-new-adornment-down, rst-preferred-bullets)
	(rst-preferred-bullets, rst-indent, rst-indent-width)
	(rst-indent-field, rst-indent-literal-normal)
	(rst-indent-literal-minimized, rst-indent-comment): Changed,
	extended and improved customization.

	(rst-line-homogeneous-p, rst-line-homogeneous-nodent-p)
	(rst-normalize-cursor-position, rst-get-decoration)
	(rst-straighten-deco-spacing, rst-re-bullets, rst-re-items)
	(rst-rstrip, rst-toc-insert-find-delete-contents)
	(rst-shift-fill-region, rst-compute-bullet-tabs)
	(rst-debug-print-tabs, rst-debug-mark-found)
	(rst-shift-region-guts, rst-shift-region

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -82,6 +82,38 @@ character when doing minibuffer filename prompts.
 
 * Changes in Specialized Modes and Packages in Emacs 24.2
 
+** reStructuredText mode
+
+*** Major merge with upstream development.
+
+*** Nearly all keys are rebound making room for more keys and comply
+better to usage in other modes. Bindings are described with C-c C-h.
+
+*** Major revision of indentation. Now works very similar to other
+modes. TAB is your friend.
+
+*** Major revision of filling. Works fine with most of
+reStructuredText syntax. Auto-filling is also supported.
+
+*** Major revision of comment handling.
+
+*** Major revision of fontification. Now works with `jit-lock-mode'.
+Thanks to Stefan Monnier for help.
+
+*** reStructuredText syntax is covered more closely in many cases.
+Among other things this improves the experience for Sphinx users.
+
+*** `rst-insert-list' inserts new list or continues existing lists.
+Based on code by Wei-Wei Guo.
+
+*** Customization is extended, corrected and improved.
+
+*** Negative prefix argument always works for `rst-adjust'.
+
+*** Window configuration is reset after displaying TOC.
+
+*** There is a package version in `rst-version'
+
 ** New `derived-mode' filter for Ibuffer, bound to `/ M'.
 `/ m' is now bound to filter by used-mode, which used to be bound to `/ M'.
 
