--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-07  Glenn Morris  <rgm@gnu.org>
+
+	* international/mule.el (find-auto-coding): Make "unibyte: t" obsolete.
+
 2012-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* loadup.el: Preload newcomment.el.
