--- a/etc/NEWS
+++ b/etc/NEWS
@@ -66,7 +66,7 @@ frames, if emacsclient is only told to open a new frame without
 specifying any file to visit or expression to evaluate.
 
 ** Using "unibyte: t" in Lisp source files is obsolete.
-Using "coding: raw-text" instead.
+Use "coding: raw-text" instead.
 
 
 * Editing Changes in Emacs 24.2
