* doc/misc/forms.texi (Long Example): Update for changed location of files.

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-07  Glenn Morris  <rgm@gnu.org>
+
+	* forms.texi (Long Example): Update for changed location of files.
+
 2012-05-04  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (INFO_EXT, INFO_OPTS): New, set by configure.
