Remove no-byte-compile setting from some lisp/language files.
Same comments as per r108075, 2012-04-30, for lisp/term:

  Not that compiling these will bring any noticeable speed benefit, but
  there's really no reason not to compile them.  The extra disk space
  and build time is negligible, and it might reveal use of obsolete
  functions, bugs, etc.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,13 @@
 2012-05-08  Glenn Morris  <rgm@gnu.org>
 
+	* lisp/language/burmese.el, language/cham.el, language/czech.el:
+	* language/english.el, language/georgian.el, language/greek.el:
+	* language/japanese.el, language/khmer.el, language/korean.el:
+	* language/lao.el, language/misc-lang.el, language/romanian.el:
+	* language/sinhala.el, language/slovak.el, language/tai-viet.el:
+	* language/thai.el, language/utf-8-lang.el:
+	Remove no-byte-compile setting.
+
 	* play/zone.el (zone-pgm-stress): Don't pollute kill-ring.  (Bug#11388)
 
 2012-05-08  Aaron S. Hawley  <aaron.s.hawley@gmail.com>
