--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-08  Glenn Morris  <rgm@gnu.org>
+
+	* make-dist: No more doc/lispref/*.el.
+
 2012-05-05  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* configure.in: Fix quoting bugs.
