--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* subr.el (defvar-local): Add debug spec and doc-string position.
+
 2012-05-08  Glenn Morris  <rgm@gnu.org>
 
 	* lisp/language/burmese.el, language/cham.el, language/czech.el:
