* lisp/vc/log-edit.el: Add GNU coding standards highlighting. (log-edit-font-lock-gnu-style) (log-edit-font-lock-gnu-keywords): New vars. (log-edit-font-lock-keywords): New fun. (log-edit-mode): Don't fold case in font-lock. (log-edit-font-lock-keywords): Do not assume case-folding. * .dir-locals.el (log-edit-mode): Enable gnu-style checks.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* .dir-locals.el (log-edit-mode): Enable gnu-style checks.
+
 2012-05-08  Glenn Morris  <rgm@gnu.org>
 
 	* make-dist: No more doc/lispref/*.el.
