Fix a typo in last commit of src/ChangeLog.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -4,7 +4,7 @@
 	* keyboard.c (read_char): Don't clear the echo area if there's no
 	message to clear.
 	* xdisp.c (redisplay_internal): Redisplay the mini window (with the
-	contents of *Minibuf-0*) if there' no message displayed in its stead.
+	contents of *Minibuf-0*) if there's no message displayed in its stead.
 
 2012-05-07  Michael Albinus  <michael.albinus@gmx.de>
 
