--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-09  Jason L. Wright  <jason.wright@inl.gov>  (tiny change)
+
+	* mail/smtpmail.el (smtpmail-send-command): Send the command and
+	the following \r\n using a single `process-send-string', since the
+	Lotus SMTP server refuses to accept any commands if they are sent
+	with two `process-send-string's (bug#11444).
+
 2012-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* shell.el (shell-parse-pcomplete-arguments): Obey
