--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-09  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* unexaix.c (make_hdr): Fix typo in prototype.
+	This bug broke the build on AIX.  Problem reported by Gilles Pion.
+
 2012-05-05  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32proc.c (new_child): Force Windows to reserve only 64KB of
