Add the option to not create lockfiles
* src/filelock.c (syms_of_filelock): New boolean create-lockfiles.
(lock_file): If create_lockfiles is 0, do nothing.

* lisp/cus-start.el (create-lockfiles): Add it.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-10  Dave Abrahams  <dave@boostpro.com>
+
+	* cus-start.el (create-lockfiles): Add it.
+
 2012-05-09  Chong Yidong  <cyd@gnu.org>
 
 	* net/browse-url.el (browse-url-url-encode-chars): Use upper-case.
