--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-10  Glenn Morris  <rgm@gnu.org>
+
+	* files.texi (Interlocking): Mention create-lockfiles option.
+
 2012-05-09  Chong Yidong  <cyd@gnu.org>
 
 	* frames.texi (Mouse References, Mouse Commands): Fix index
