--- a/etc/NEWS
+++ b/etc/NEWS
@@ -65,6 +65,10 @@ ImageMagick to view images, set
 frames, if emacsclient is only told to open a new frame without
 specifying any file to visit or expression to evaluate.
 
++++
+** You can prevent the creation of lock files by setting `create-lockfiles'
+to nil.  Use with caution, and only if you really need to.
+
 ** Using "unibyte: t" in Lisp source files is obsolete.
 Use "coding: raw-text" instead.
 
