--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,3 +1,8 @@
+2012-05-10  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (MV_DIRS): Remove.
+	(install): Simplify the --with-ns case.
+
 2012-04-09  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (EMACS): Rename from BUILT_EMACS.
@@ -2289,7 +2294,7 @@
 ;; coding: utf-8
 ;; End:
 
-  Copyright (C) 1997-1999, 2001-2012  Free Software Foundation, Inc.
+  Copyright (C) 1997-1999, 2001-2012 Free Software Foundation, Inc.
 
   This file is part of GNU Emacs.
 
