Update doc for obsolescence of "unibyte: t"
* doc/emacs/mule.texi (Disabling Multibyte):
* doc/lispref/loading.texi (Loading Non-ASCII):
Replace the obsolete "unibyte: t" with "coding: raw-text".
* etc/NEWS: Related markup.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
+	* loading.texi (Loading Non-ASCII): Replace the obsolete "unibyte: t"
+	with "coding: raw-text".
+
 	* files.texi (File Locks): Mention create-lockfiles option.
 
 2012-05-09  Glenn Morris  <rgm@gnu.org>
