--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,8 @@
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
+	* mule.texi (Disabling Multibyte): Replace the obsolete "unibyte: t"
+	with "coding: raw-text".
+
 	* files.texi (Interlocking): Mention create-lockfiles option.
 
 2012-05-09  Chong Yidong  <cyd@gnu.org>
