* loading.texi (Loading Non-ASCII): Multibyte sessions no longer exist.

--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -2,6 +2,7 @@
 
 	* loading.texi (Loading Non-ASCII): Replace the obsolete "unibyte: t"
 	with "coding: raw-text".
+	Concept of multibyte sessions no longer exists.
 
 	* files.texi (File Locks): Mention create-lockfiles option.
 
