--- a/doc/lispref/loading.texi
+++ b/doc/lispref/loading.texi
@@ -376,9 +376,8 @@ automatically.  However, if this does make a difference, you can force
 a particular Lisp file to be interpreted as unibyte by writing
 @samp{coding: raw-text} in a local variables section.  With
 that designator, the file will unconditionally be interpreted as
-unibyte, even in an ordinary multibyte Emacs session.  This can matter
-when making keybindings to non-@acronym{ASCII} characters written as
-@code{?v@var{literal}}.
+unibyte.  This can matter when making keybindings to
+non-@acronym{ASCII} characters written as @code{?v@var{literal}}.
 
 @node Autoload
 @section Autoload
