Install self-contained ns leim files directly to their final destination
This is instead of installing them first in one place, then moving them.
It also fixes the previous change, which was incorrect for
the -disable-ns-self-contained case.

* configure.in (LEIM_INSTALLDIR): New output variable.

* leim/Makefile.in: (install_prefix): New.
(LEIM_INSTALLDIR): New, set by configure.
(install): Use LEIM_INSTALLDIR.

--- a/leim/ChangeLog
+++ b/leim/ChangeLog
@@ -1,5 +1,11 @@
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in: Install self-contained ns files directly to
+	their final destination.
+	(install_prefix): New.
+	(LEIM_INSTALLDIR): New, set by configure.
+	(install): Use LEIM_INSTALLDIR.
+
 	* Makefile.in (MV_DIRS): Remove.
 	(install): Simplify the --with-ns case.
 
