--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-10  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (LEIM_INSTALLDIR): New output variable.
+
 2012-05-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* .dir-locals.el (log-edit-mode): Enable gnu-style checks.
