Cleanups and improvements for FFAP and URL.
* ffap.el (ffap-url-unwrap-local): Make it work right.
Use url-generic-parse-url, and handle host names and Windows
filenames properly.
(ffap-url-unwrap-remote): Use url-generic-parse-url.
(ffap-url-unwrap-remote): Accept list values, specifying a list of
URL schemes to work on.
(ffap--toggle-read-only): New function.
(ffap-read-only, ffap-read-only-other-window)
(ffap-read-only-other-frame): Use it.
(ffap-fixup-url): Don't check ffap-ftp-regexp, since it is not
necessary for ffap-url-unwrap-remote.

* url-parse.el (url-path-and-query, url-port-if-non-default): New
functions.
(url-generic-parse-url): Don't set the portspec slot if it is not
specified; that is what `url-port' is for.
(url-port): Only require the scheme to be specified to call
url-scheme-get-property.

* url-util.el (url-encode-url): Use url-path-and-query.

* url-vars.el (url-mime-charset-string): Load mm-util lazily.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,17 @@
+2012-05-10  Chong Yidong  <cyd@gnu.org>
+
+	* ffap.el (ffap-url-unwrap-local): Make it work right (Bug#9131).
+	Use url-generic-parse-url, and handle host names and Windows
+	filenames properly.
+	(ffap-url-unwrap-remote): Use url-generic-parse-url.
+	(ffap-url-unwrap-remote): Accept list values, specifying a list of
+	URL schemes to work on.
+	(ffap--toggle-read-only): New function.
+	(ffap-read-only, ffap-read-only-other-window)
+	(ffap-read-only-other-frame): Use it.
+	(ffap-fixup-url): Don't check ffap-ftp-regexp, since it is not
+	necessary for ffap-url-unwrap-remote.
+
 2012-05-10  Dave Abrahams  <dave@boostpro.com>
 
 	* cus-start.el (create-lockfiles): Add it.
