--- a/etc/NEWS
+++ b/etc/NEWS
@@ -150,6 +150,12 @@ these commands now).
 ** erc will look up server/channel names via auth-source and use the
 channel keys found, if any.
 
+** FFAP
+
+*** The option `ffap-url-unwrap-remote' can now be a list of strings,
+specifying URL types which should be converted to remote file names at
+the FFAP prompt.  The default is now '("ftp").
+
 ** Follow mode
 
 *** The obsolete variable `follow-mode-off-hook' has been removed.
