--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-05-11  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (install-arch-indep): There are no more Makefile.c files.
+
 2012-05-10  Glenn Morris  <rgm@gnu.org>
 
 	* configure.in (LEIM_INSTALLDIR): New output variable.
